--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-memprocfs
-numpy
-requests
+memprocfs~=5.11.4
+numpy~=2.0.1
+requests~=2.32.3
+pygame~=2.6.0
+pygame_gui~=0.6.12
+tkintertools~=3.0.0rc1
+matplotlib~=3.9.2
+pillow~=10.4.0
+Flask~=3.0.3
